--- a/public/favorites/index.html
+++ b/public/favorites/index.html
@@ -1,10 +1,10 @@
 <!doctype html>
 <html class="" lang="en-us">
-  <head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=12070&amp;path=livereload" data-no-instant defer></script>
+  <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Favorites - Kevins Photos</title>
-  <link rel="canonical" href="http://localhost:12070/favorites/" />
+  <link rel="canonical" href="https://example.org/favorites/" />
   <link rel="icon" type="image/svg+xml" href="/images/favicon.svg" />
   <link rel="icon" type="image/png" href="/images/favicon.png" />
   <link rel="apple-touch-icon" sizes="180x180" href="/images/apple-touch-icon.png" />
@@ -16,12 +16,12 @@
   <meta property="og:title" content="Favorites" />
 <meta property="og:description" content="" />
 <meta property="og:type" content="article" />
-<meta property="og:url" content="http://localhost:12070/favorites/" /><meta property="og:image" content="http://localhost:12070/favorites/0001.jpg" /><meta property="article:section" content="" />
+<meta property="og:url" content="https://example.org/favorites/" /><meta property="og:image" content="https://example.org/favorites/0001.jpg" /><meta property="article:section" content="" />
   
   
 
   
-  <link rel="stylesheet" href="/css/main.min.bc3ee17f3b8fd82d1b766e6324ada06572db729ae069536ee270449cbe141efc.css" />
+  <link rel="stylesheet" href="/css/main.min.3a729985de88f126ebad591cc15e13897d284788ba60385b43ec8f705dbe4f83.css" />
   
   
   <script src="/js/main.64868ea2cfa671267b57ebb83bbd8fe90eb9b2a50c91e4e037348a389c272b73.js" defer></script></head>
