--- a/public/404.html
+++ b/public/404.html
@@ -3,7 +3,7 @@
   <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>404 Page not found - Kevins Photos</title>
+  <title>404 Page not found - Kevin&#39;s Photos</title>
   <link rel="canonical" href="https://example.org/404.html" />
   <link rel="icon" type="image/svg+xml" href="/images/favicon.svg" />
   <link rel="icon" type="image/png" href="/images/favicon.png" />
